plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'com.google.cloud.tools.jib' version '1.8.0'
	id 'java'
	id 'groovy'
}

group = 'com.streamster'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

def dockerPassword = hasProperty('gcloudToken') ? gcloudToken : file('../keyfile.json').text

jib {
	to {
		image = 'gcr.io/streamster-289010/api-gateway:latest'
		auth {
			username = '_json_key'
			password = dockerPassword
		}
	}
	container{
		jvmFlags = ['-Dspring.profiles.active=prod']
	}
}
repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "Hoxton.SR3")
}

dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
//	compile 'io.springfox:springfox-swagger2:2.9.2'
//	compile 'io.springfox:springfox-swagger-ui:2.9.2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'
	testCompile "org.codehaus.groovy:groovy:2.5.13"
	testCompile platform("org.spockframework:spock-bom:2.0-M3-groovy-2.5")
	testCompile "org.spockframework:spock-core"
	testCompile group: 'org.spockframework', name: 'spock-spring', version: '2.0-M3-groovy-2.5'
}

tasks.withType(JavaCompile) {
	options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()
}
